traefik/pve-dashboard-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: proxmox
    app.kubernetes.io/name: proxmox
  name: pve1
  namespace: proxmox
spec:
  type: ExternalName
  ports:
    - name: https
      port: 8006
      targetPort: 8006
  externalName: 192.168.1.27
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pve1-dashboard
  namespace: proxmox
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`pve1.local.xuhuisun.com`)
    services:
    - kind: Service
      name: pve1
      port: 8006
      serversTransport: insecuretransport
  tls:
    secretName: local-xuhuisun-com-tls
