traefik/traefik-dashborad-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.local.xuhuisun.com`)
    services:
    - kind: TraefikService
      name: api@internal
